--- a/css/estil.css
+++ b/css/estil.css
@@ -218,7 +218,7 @@ aside{
 }
 @font-face {
 	font-family: Shepila;
-	src: url(../Shepila.ttf);
+	src: url(../fontes/Shepila.ttf);
 }
 #tp p{
 	font-family: Shepila;
