--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@
   margin: 0;
 }
 body{
-  background-image: url(../pao.jpg);
+  background-image: url(../fotos/pao.jpg);
 }
 html, body {
   height: 100%;
