--- a/css/csss.css
+++ b/css/csss.css
@@ -10,7 +10,7 @@
 body{
 	height: 100%;
 	width: 100%;
-	background-image: url(../pao.jpg);
+	background-image: url(../fotos/pao.jpg);
 }
 
 header{
