--- a/css/estile.css
+++ b/css/estile.css
@@ -4,6 +4,7 @@
 }
 body{
 	background-color: rgb(255, 255, 255);
+	overflow-x: hidden;
 }
 header{
 	height: 100px;
@@ -40,15 +41,15 @@ a{
 	top: -80%;
 }
 .item{
-  width: 40%;
-  height: 320px;
+  width: 45%;
+  height: 420px;
   background: white;
   flex-shrink: 0;
   cursor: pointer;
   opacity: 0.8;
   transition: all 600ms ease-in-out;
   position: relative;
-  left: 30%;
+  left: 25%;
   margin-right: 3%;
 }
 .item img{
@@ -126,6 +127,15 @@ aside{
 	cursor: pointer;
 	position: relative;
 	opacity: 1;
+}
+.cata img{
+	transition: all 1s;
+	z-index: 2;
+}
+.cata img:hover{
+	position: relative;
+	width: 105%;
+	height: 605px;
 }
 #catalogo{
 	overflow-x:auto;
@@ -227,6 +237,8 @@ aside{
 	top: -15px;
 	left: 40%;
 	color: white;
+	animation-duration: 1s;
+	animation-name: slidein;
 }
 .barra{
 	border-color: #503320;
@@ -241,6 +253,8 @@ aside{
 	top: -70%;
 	border-color: #503320;
 	background-color: #503320;
+	animation-duration: 1s;
+	animation-name: slidein;
 }
 #ih{
 	width: 19%;
@@ -250,15 +264,19 @@ aside{
 	top: -70%;
 	border-color: #503320;
 	background-color: #503320;
+	animation-duration: 2s;
+	animation-name: slidei;
 }
 #uh{
-	width: 14.5%;
+	width: 19%;
 	transform: rotate(90deg);
-	left: 15%;
+	left: 90.2%;
 	position: relative;
-	top: 49%;
+	top: -70%;
 	border-color: #503320;
 	background-color: #503320;
+	animation-duration: 3s;
+	animation-name: slide;
 }
 #geral{
 	display: flex;
@@ -272,4 +290,26 @@ aside{
 	left: 21%;
 	top: -15px;
 	color: white;
+	animation-duration: 2s;
+	animation-name: slidei;
+}
+#s{
+	font-family: Shepila;
+	font-size: 30px;
+	position: relative;
+	left: 31%;
+	top: -15px;
+	color: white;
+	animation-duration: 3s;
+	animation-name: slide;
+}
+#b{
+	font-family: Shepila;
+	font-size: 30px;
+	position: relative;
+	left: 31%;
+	top: -15px;
+	color: white;
+	animation-duration: 4s;
+	animation-name: slid;
 }
