--- a/css/estile.css
+++ b/css/estile.css
@@ -315,3 +315,55 @@ aside{
 	animation-duration: 4s;
 	animation-name: slid;
 }
+#hf{
+	width: 100%;
+}
+#hff{
+	width: 100%;
+	height: 60%;
+	border: #694025 3px solid;
+}
+footer{
+	width: 100%;
+	height: 140px;
+	margin-top: 40px;
+	background-color: rgb(65, 57, 57);
+}
+.bola{
+	height: 35px;
+	width: 35px;
+	margin-left: 10px;
+	border: white solid 2px;
+	border-radius: 100px;
+	background-color: white;
+	left: 45%;
+	top: 40%;
+	position: relative;
+}
+#face{
+	height: 35px;
+	width: 35px;
+	position: relative;
+	top: -1px;
+	left: 1px;
+}
+.lg{
+	height: 25px;
+	width: 25px;
+	position: relative;
+	left: 5px;
+	top: 4px;
+}
+#fora{
+	display: flex;
+ 	flex-flow: row nowrap;
+	height: 80%;
+}
+#contato{
+	position: relative;
+	font-family: Shepila;
+	font-size: 8px;
+	color: rgb(179, 179, 179);
+	top: -15%;
+	left: 48%;
+}
